--- a/subs/aiboboxx.yaml
+++ b/subs/aiboboxx.yaml
@@ -1,10 +1,16 @@
 proxies:
   - {"name":"高性价比机场:https://kfyun.uk","type":"ss","server":"127.0.0.1","port":443,"cipher":"aes-128-gcm","password":"6601fb90e9b3"}
+  - {"name":"0|--1","type":"ss","server":"125.141.31.100","port":17725,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--2","type":"ss","server":"27.255.82.135","port":61891,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
   - {"name":"0|--3","type":"ss","server":"54.180.9.243","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--4","type":"ss","server":"125.141.31.100","port":17725,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
-  - {"name":"0|--6","type":"ss","server":"35.94.25.109","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--7","type":"ss","server":"210.217.18.69","port":30956,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
-  - {"name":"0|--8","type":"ss","server":"168.126.234.233","port":40915,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--4","type":"ss","server":"27.255.82.23","port":5412,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--5","type":"ss","server":"38.110.1.46","port":6379,"cipher":"aes-256-gcm","password":"zDNVedRFPQexG9v"}
+  - {"name":"0|--6","type":"ss","server":"38.110.1.46","port":443,"cipher":"aes-256-gcm","password":"pKEW8JPByTVTLtM"}
+  - {"name":"0|--8","type":"ss","server":"54.179.76.173","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--10","type":"ss","server":"210.217.18.69","port":30956,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--11","type":"ss","server":"38.110.1.46","port":7001,"cipher":"aes-256-gcm","password":"RexnBgU7EV5ADxG"}
+  - {"name":"0|--12","type":"ss","server":"38.110.1.46","port":8091,"cipher":"aes-256-gcm","password":"PCnnH6SQSnfoS27"}
+  - {"name":"0|--13","type":"ss","server":"222.112.15.140","port":4410,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
   - {"skip-cert-verify":true,"type":"trojan","password":"phXKwfrd","server":"36.150.215.220","port":42293,"name":"13,14|香港|@ripaojiedian"}
   - {"skip-cert-verify":true,"type":"trojan","password":"phXKwfrd","server":"223.111.144.12","port":21673,"name":"13,14|香港2|@ripaojiedian"}
   - {"name":"13|🇭🇰 香港3|@ripaojiedian","type":"ss","server":"45.250.184.183","port":6181,"cipher":"chacha20-ietf-poly1305","password":"11a805f2-41a7-4cd8-8406-0470c3cde0d3"}
